limited AOS animation to certain screen sizes to keep it less buggy on mobile

--- a/app/assets/stylesheets/components/_custom.scss
+++ b/app/assets/stylesheets/components/_custom.scss
@@ -168,7 +168,7 @@ section {
   }
 
   #mobile-menu.open {
-    display: block;
+    padding-top: 200px;
     opacity: 1;
     z-index: 997;
   }
