--- a/app/assets/stylesheets/components/sections/_projects_section.scss
+++ b/app/assets/stylesheets/components/sections/_projects_section.scss
@@ -175,7 +175,7 @@
   }
 
   .pan-animate{
-    bottom: -70px;
+    bottom: -110px;
   }
 }
 
